--- a/src/pages/Home/index.scss
+++ b/src/pages/Home/index.scss
@@ -394,11 +394,21 @@
 @media (max-width: 767px) {
   .featured-event {
     & &__col {
+      &:last-of-type,
+      &:first-of-type {
+        margin-left: 0;
+        margin-right: 0;
+      }
+
       .btn {
         width: 100%;
 
         &:first-of-type {
           margin-right: 0;
+        }
+
+        &:last-of-type {
+          margin-top: 20px;
         }
       }
     }
